# onsetto-engineering-challenge

./: .env.example  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
api-client/onsetto_client/: __init__.py  __main__.py  account.py  auth.py  cli.py  constants.py  exceptions.py  models.py  settings.py  transport.py  validators.py
browser-automation/: playwright.config.ts  selectors.ts  test-data.ts
browser-automation/pages/: AccountPage.ts  LoginPage.ts
browser-automation/tests/: account-update.spec.ts
browser-automation/utils/: dates.ts
docs/: architecture.md
tests/: test_account_client.py  test_auth_client.py  test_cli.py  test_settings.py  test_transport.py  test_validators.py
