[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "onsetto-client"
version = "0.1.0"
description = "Typed Python API client for the Onsetto Engineering Challenge"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.13",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "api-client"}

[tool.setuptools.packages.find]
where = ["api-client"]

[tool.setuptools.package-data]
onsetto_client = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["api-client"]

[tool.mypy]
python_version = "3.11"
mypy_path = "api-client"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
